--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
   <div class="container">
     <a href="/front.html" >Front Page</a>
-    <a href="/back.html" target="_blank">Back Page</a>
+    <a href="/back.html" >Back Page</a>
   </div>
 </body>
 </html>
